<resources>
    <string name="app_name">Go VPN</string>
    <string name="setting">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GO VPN</string>
    <string name="nav_header_subtitle">Get Unlimited to all users</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="private_vpn">Private VPN</string>
    <string name="unlimited_access_to_all">Unlimited access to all</string>
    <string name="all">All</string>
    <string name="streaming">Streaming</string>
    <string name="gaming">Gaming</string>
    <string name="choose_location">Choose Location</string>
    <string name="back_button">Back Button</string>
    <string name="ip_address">IP Address:</string>
    <string name="close">Close</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="speed_test">Speed Test</string>
    <string name="current_location">Current Location</string>
    <string name="split_tunneling">Split Tunneling</string>
    <string name="select_language">Select Language</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="upgrade_to_pro">Upgrade to PRO!</string>
    <string name="remove_ads_and_unlock_all_location">Remove Ads and unlock all location</string>
    <string name="premium_features">Premium features</string>
    <string name="anonymous">Anonymous</string>
    <string name="hide_your_ip_with_anonymous_surfing">Hide your IP with anonymous surfing</string>
    <string name="fast">Fast</string>
    <string name="up_to_1000_mb_s_bandwidth_nto_explore">Up to 1000 Mb/s bandwidth \nto explore</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="enjoy_the_app_without_annoying_ads">Enjoy the app without annoying ads</string>
    <string name="secure">Secure</string>
    <string name="transfer_traffic_via_encrypted_tunnel">Transfer traffic via encrypted tunnel</string>
    <string name="_1_month">1 MONTH</string>
    <string name="_9_99_month">9.99 $/Month</string>
    <string name="_1_year">1 YEAR</string>
    <string name="_4_99_month">4.99 $/Month</string>
    <string name="love_vpn_app">Love VPN App?</string>
    <string name="we_appreciate_your_feedback">We appreciate your feedback.</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="connection_mode">Connection Mode</string>
    <string name="openvpn">OpenVPN</string>
    <string name="ipsec">IPSec</string>
    <string name="issr">ISSR</string>
    <string name="kill_switch">Kill Switch</string>
    <string name="block_internet_when_connecting_or_nchanging_servers">Block Internet When Connecting Or\nChanging Servers</string>
    <string name="connection">Connection</string>
    <string name="connect_when_prime_vpn_starts">Connect when Prime VPN starts</string>
    <string name="connection_duration_boost">Connection duration boost</string>
    <string name="notification">Notification</string>
    <string name="show_notification_when_prime_vpn_is_n_not_connected">Show notification when Prime VPN is\n not connected</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="reduce_glare_and_improve_night_viewing">Reduce glare and improve night viewing</string>
    <string name="test_internet_speed">Test internet speed</string>
    <string name="ping_ms">Ping -- ms</string>
    <string name="download_0_00_mbps">Download 0.00 Mbps</string>
    <string name="download_rate">Download Rate --</string>
    <string name="upload_rate">Upload Rate --</string>
    <string name="start_speed_test">Start speed test</string>
    <string name="english">English</string>
    <string name="united_states">United States</string>
    <string name="france">France</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="canada">Canada</string>
    <string name="germany">Germany</string>
    <string name="switzerland">Switzerland</string>
    <string name="netherlands">Netherlands</string>
    <string name="sweden">Sweden</string>
    <string name="norway">Norway</string>
    <string name="australia">Australia</string>
    <string name="japan">Japan</string>
    <string name="singapore">Singapore</string>
    <string name="zurich">Zurich</string>
    <string name="free">Free</string>
    <string name="altstetten">Altstetten</string>
    <string name="paris">Paris</string>
    <string name="lyon">Lyon</string>
    <string name="marseille">Marseille</string>
    <string name="london">London</string>
    <string name="manchester">Manchester</string>
    <string name="birmingham">Birmingham</string>
    <string name="toronto">Toronto</string>
    <string name="vancouver">Vancouver</string>
    <string name="montreal">Montreal</string>
    <string name="berlin">Berlin</string>
    <string name="munich">Munich</string>
    <string name="frankfurt">Frankfurt</string>
    <string name="geneva">Geneva</string>
    <string name="basel">Basel</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="rotterdam">Rotterdam</string>
    <string name="the_hague">The Hague</string>
    <string name="stockholm">Stockholm</string>
    <string name="gothenburg">Gothenburg</string>
    <string name="malm">Malmö</string>
    <string name="oslo">Oslo</string>
    <string name="bergen">Bergen</string>
    <string name="trondheim">Trondheim</string>
    <string name="sydney">Sydney</string>
    <string name="melbourne">Melbourne</string>
    <string name="brisbane">Brisbane</string>
    <string name="tokyo">Tokyo</string>
    <string name="osaka">Osaka</string>
    <string name="kyoto">Kyoto</string>
    <string name="sentosa">Sentosa</string>
    <string name="jurong">Jurong</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="try_premium_free">TRY PREMIUM FREE</string>
    <string name="_7_day_free_trial_then_9_99_month">7-Day Free Trial. Then 9.99 $/Month</string>
</resources>