<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Custom "Upgrade to PRO" Item -->
        <item
            android:id="@+id/nav_upgrade_to_pro"
            android:title=""
            android:enabled="true"
            android:checkable="false"
            app:actionLayout="@layout/custom_upgrade_to_pro_layout"
            android:icon="@null" />



        <!-- Subscription Settings -->
        <item
            android:id="@+id/nav_restore_purchases"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/restore_purchases"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/nav_manage_subscriptions"
            android:icon="@drawable/sub"
            android:title="@string/manage_subscriptions"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>


        <!-- Apps Settings -->
        <item
            android:id="@+id/nav_speed_test"
            android:icon="@drawable/fast"
            android:title="@string/speed_test"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/nav_current_location"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/current_location"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/nav_split_tunneling"
            android:icon="@drawable/split"
            android:title="@string/split_tunneling"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>



        <!-- General Settings -->
        <item
            android:id="@+id/nav_select_language"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/select_language"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/nav_share_with_friends"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share_with_friends"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/thumb"
            android:title="@string/rate_us"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/policy"
            android:title="@string/privacy_policy"
            app:itemTextAppearance="@style/CustomMenuItemStyle"/>
    </group>
</menu>
