<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1C1B24"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- Close Button aligned to the top right -->
    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/close"
        android:contentDescription="@string/close" />

    <!-- Logo centered horizontally -->
    <ImageView
        android:id="@+id/goPro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_icon"
        android:contentDescription="@string/nav_header_desc" />

    <!-- Title below the logo, centered horizontally -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goPro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/private_vpn"
        android:textColor="#6D4AFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Subtitle below the title, centered horizontally -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/unlimited_access_to_all"
        android:textColor="#B6B1B1"
        android:textSize="14sp" />


</RelativeLayout>
