<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_gravity="center">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/love_vpn_app"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="@android:color/white"
android:layout_gravity="center"
android:paddingBottom="8dp"/>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/we_appreciate_your_feedback"
android:textColor="@android:color/white"
android:layout_gravity="center"
android:paddingBottom="16dp"/>

<RatingBar
android:id="@+id/ratingBar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:numStars="5"
android:stepSize="1.0"
android:isIndicator="false"
android:theme="@style/RatingBarTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"/>
    </LinearLayout>

    </LinearLayout>
